<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eric_lai.intelligentexpress.activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:gravity="center"
        android:id="@+id/loginTv" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:hint="@string/plz_input_your_login_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginTop="80dp"
        android:hint="@string/plz_input_your_login_password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        android:text="@string/login_button"
        android:textSize="30sp"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:id="@+id/loginBtn" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/sign_button"
        android:textSize="30sp"
        android:layout_alignTop="@+id/loginBtn"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:id="@+id/signBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_instruction"
        android:textSize="23sp"
        android:id="@+id/signInstructionBtn"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
