<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhi_neng_hua_wang_luo_kuai_di_zhong_duan"
        android:textSize="@dimen/abc_action_bar_default_height_material"
        android:gravity="center"
        android:id="@+id/textView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/pu_tong_yong_hu_ru_kou"
        android:id="@+id/userEntrance"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/posterEntrance"
        android:layout_alignStart="@+id/posterEntrance" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/you_di_yuan_ru_kou"
        android:id="@+id/posterEntrance"
        android:layout_below="@+id/userEntrance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

</RelativeLayout>
